style: fix icon alignment with list

--- a/feature-libs/organization/administration/styles/_details.scss
+++ b/feature-libs/organization/administration/styles/_details.scss
@@ -76,7 +76,8 @@
 
     cx-icon[ng-reflect-type='INFO'] {
       color: var(--cx-color, var(--cx-color-info));
-      display: contents;
+      align-self: flex-start;
+      margin-top: 4px;
     }
   }
 }
